--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
         <img src="https://gh.jerryz.com.cn/achievements" alt="achievements"><br>
         <img src="https://gh.jerryz.com.cn/languages" alt="language"><br>
         <a href="https://blog.jerryz.com.cn"><img src="https://gh.jerryz.com.cn/rss" alt="rss"></a><br>
+        <picture>
+            <source media="(prefers-color-scheme: dark)" srcset="https://gh.jerryz.com.cn/snake-dark" />
+            <source media="(prefers-color-scheme: light)" srcset="https://gh.jerryz.com.cn/snake" />
+            <img alt="github-snake" src="https://gh.jerryz.com.cn/snake" />
+        </picture>
         <img src="https://gh.jerryz.com.cn/stargazers" alt="stargazers"><br>
         <img src="https://gh.jerryz.com.cn/calendar" alt="calendar"><br>
         <img src="https://gh.jerryz.com.cn/history" alt="history"><br>
